syntax = "proto3";
//option java_multiple_files = true;
package com.example.grpc;

message HelloRequest {
    string name = 1;
    repeated string hobbies = 2;
}

message HelloResponse {
    string greeting = 1;
}

message GreetManyTimeRequest {
    HelloRequest helloRequest = 1;
}

message GreetManyTimeResponse {
    HelloResponse helloResponse = 1;
}

service GreetingService {
    rpc greeting(HelloRequest) returns (HelloResponse);
    rpc greetManyTimes(GreetManyTimeRequest) returns(stream GreetManyTimeResponse);
}
